src/OpenCvSharp/Internal/PInvoke/NativeMethods/photo/NativeMethods_photo_ColorCorrectionModel.cs

using System.Runtime.CompilerServices;
using System.Runtime.InteropServices;

#pragma warning disable 1591
#pragma warning disable CA1401 // P/Invokes should not be visible
#pragma warning disable IDE1006 // Naming style

namespace OpenCvSharp.Internal;

static partial class NativeMethods
{
    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial ExceptionStatus photo_ccm_gammaCorrection(in InputArrayProxy src, in OutputArrayProxy dst, double gamma);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus photo_ccm_ColorCorrectionModel_delete(IntPtr obj);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus photo_ccm_ColorCorrectionModel_new1(out IntPtr returnValue);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial ExceptionStatus photo_ccm_ColorCorrectionModel_new2(
        in InputArrayProxy src, int constColor, out IntPtr returnValue);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial ExceptionStatus photo_ccm_ColorCorrectionModel_new3(
        in InputArrayProxy src, in InputArrayProxy colors, int refColorSpace, out IntPtr returnValue);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial ExceptionStatus photo_ccm_ColorCorrectionModel_new4(
        in InputArrayProxy src, in InputArrayProxy colors, int refColorSpace, in InputArrayProxy coloredPatchesMask, out IntPtr returnValue);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus photo_ccm_ColorCorrectionModel_setColorSpace(OpenCvSafeHandle obj, int cs);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus photo_ccm_ColorCorrectionModel_setCcmType(OpenCvSafeHandle obj, int ccmType);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus photo_ccm_ColorCorrectionModel_setDistance(OpenCvSafeHandle obj, int distance);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus photo_ccm_ColorCorrectionModel_setLinearization(OpenCvSafeHandle obj, int linearizationType);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus photo_ccm_ColorCorrectionModel_setLinearizationGamma(OpenCvSafeHandle obj, double gamma);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus photo_ccm_ColorCorrectionModel_setLinearizationDegree(OpenCvSafeHandle obj, int deg);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus photo_ccm_ColorCorrectionModel_setSaturatedThreshold(OpenCvSafeHandle obj, double lower, double upper);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus photo_ccm_ColorCorrectionModel_setWeightsList(OpenCvSafeHandle obj, IntPtr weightsList);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus photo_ccm_ColorCorrectionModel_setWeightCoeff(OpenCvSafeHandle obj, double weightsCoeff);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus photo_ccm_ColorCorrectionModel_setInitialMethod(OpenCvSafeHandle obj, int initialMethodType);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus photo_ccm_ColorCorrectionModel_setMaxCount(OpenCvSafeHandle obj, int maxCount);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus photo_ccm_ColorCorrectionModel_setEpsilon(OpenCvSafeHandle obj, double epsilon);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus photo_ccm_ColorCorrectionModel_setRGB(OpenCvSafeHandle obj, int rgb);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus photo_ccm_ColorCorrectionModel_compute(OpenCvSafeHandle obj, out IntPtr returnValue);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus photo_ccm_ColorCorrectionModel_getColorCorrectionMatrix(OpenCvSafeHandle obj, out IntPtr returnValue);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus photo_ccm_ColorCorrectionModel_getLoss(OpenCvSafeHandle obj, out double returnValue);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus photo_ccm_ColorCorrectionModel_getSrcLinearRGB(OpenCvSafeHandle obj, out IntPtr returnValue);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus photo_ccm_ColorCorrectionModel_getRefLinearRGB(OpenCvSafeHandle obj, out IntPtr returnValue);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus photo_ccm_ColorCorrectionModel_getMask(OpenCvSafeHandle obj, out IntPtr returnValue);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus photo_ccm_ColorCorrectionModel_getWeights(OpenCvSafeHandle obj, out IntPtr returnValue);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial ExceptionStatus photo_ccm_ColorCorrectionModel_correctImage(
        OpenCvSafeHandle obj, in InputArrayProxy src, in OutputArrayProxy dst, int islinear);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus photo_ccm_ColorCorrectionModel_write(OpenCvSafeHandle obj, IntPtr fs);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus photo_ccm_ColorCorrectionModel_read(OpenCvSafeHandle obj, IntPtr node);
}
